# Binance-Futures-Trading-Tool

./: .gitignore  CLOUD_ARCHITECTURE_AND_ENHANCEMENTS.md  Cargo.toml  Dockerfile  FINAL_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_STATUS.md  IMPROVEMENT_ROADMAP.md  LOB_HEATMAP_IMPROVEMENT_PLAN.md  Makefile  README.md  SCREENER_DOCUMENTATION.md  VPVR_IMPLEMENTATION.md  config.toml  core_implementation.rs  docker-compose.yml  gui_implementation.rs  processing_engine.rs  scripts_tests_tools.sh
.claude/: settings.local.json
md_files/: FIXES_APPLIED.md  START.md  binance_screener_plan.md  deployment_documentation.md
scripts/: binance-screener.service  health_check.sh  install.sh
src/: main.rs
src/analysis/: footprint.rs  imbalance.rs  indicators.rs  liquidations.rs  mod.rs  timeframe_manager.rs  traded_volume_tracker.rs  volume_analysis.rs
src/config/: app_settings.rs  mod.rs  settings.rs
src/data/: database.rs  market_data.rs  mod.rs  orderbook.rs  orderbook_manager.rs  orderflow.rs  symbols.rs  websocket.rs
src/gui/: app.rs  dom_window.rs  drawing_tools.rs  footprint_panel.rs  heatmap_colors.rs  imbalance_panel.rs  liquidation_panel.rs  mod.rs  screener_panel.rs  theme.rs
src/utils/: formatting.rs  math.rs  mod.rs
