[package]
name = "binance-screener"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.24"
eframe = "0.24"
egui_extras = "0.24"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "native-tls"] }
rusqlite = { version = "0.29", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
ordered-float = "3.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
toml = "0.8"
url = "2.4"
futures-util = "0.3"
plotters = "0.3"
plotters-canvas = "0.3"
winapi = { version = "0.3", features = ["winuser"] }
dirs = "5.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true